[gd_scene load_steps=13 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://game/code/DialogueWidgets/desktop_balloon.gd" id="1_esuuq"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="3_6yq40"]
[ext_resource type="Texture2D" uid="uid://cj7fvfpjdvpcf" path="res://game/assets/background.png" id="3_cpeu0"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_y2fhi"]
[ext_resource type="Script" path="res://game/code/DialogueWidgets/message_scroll_container.gd" id="5_05xb1"]
[ext_resource type="Texture2D" uid="uid://7g63smhgk6yh" path="res://game/assets/chara/portrait_irina.png" id="7_xtb7y"]
[ext_resource type="Theme" uid="uid://chac18av44lpc" path="res://game/themes/theme_desktop.tres" id="8_ey361"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="DesktopBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_esuuq")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_cpeu0")

[node name="MessageScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
offset_left = 270.0
offset_top = 156.0
offset_right = 1009.0
offset_bottom = 542.0
theme = ExtResource("8_ey361")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("5_05xb1")

[node name="MarginContainer" type="MarginContainer" parent="MessageScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 70

[node name="MessageHistory" type="VBoxContainer" parent="MessageScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -385.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_qq3yp")

[node name="Responses" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -366.0
offset_top = -224.0
offset_right = 347.0
offset_bottom = -181.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0

[node name="ResponsesMenu" type="HBoxContainer" parent="Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("3_y2fhi")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Responses/ResponsesMenu"]
layout_mode = 2
theme = ExtResource("8_ey361")
text = "Response example"

[node name="ResponseExample2" type="Button" parent="Responses/ResponsesMenu"]
layout_mode = 2
theme = ExtResource("8_ey361")
text = "Response example"

[node name="ResponseExample3" type="Button" parent="Responses/ResponsesMenu"]
layout_mode = 2
theme = ExtResource("8_ey361")
text = "Response example"

[node name="IrinaPortrait" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(1058, 520)
scale = Vector2(0.457527, 0.457527)
texture = ExtResource("7_xtb7y")

[node name="NarratorLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 159.0
offset_top = 638.0
offset_right = -164.0
offset_bottom = 714.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "We hadn’t spoken much since high school, and seeing her name pop up felt strange—almost nostalgic."
fit_content = true
scroll_active = false
script = ExtResource("3_6yq40")
seconds_per_step = 0.05
skip_pause_at_abbreviations = PackedStringArray("Mr", "Mrs", "Ms", "Dr", "etc", "eg", "ex")

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
